Fix responsive for all pages

--- a/assets/sass/partials/_location.scss
+++ b/assets/sass/partials/_location.scss
@@ -14,3 +14,9 @@
     margin-top: -45px;
   }
 }
+
+// Map
+// -----------------------------------------------------------------------------
+#map_canvas {
+  width: 100% !important;
+}
