--- a/assets/sass/partials/_panel.scss
+++ b/assets/sass/partials/_panel.scss
@@ -29,6 +29,10 @@
     .views-exposed-form {
       display: table;
       margin: 0 auto;
+      width: 100%;
+      @include bp(sm) {
+        width: auto;
+      }
     }
   }
 }
