--- a/assets/sass/global/_helper.scss
+++ b/assets/sass/global/_helper.scss
@@ -159,14 +159,20 @@ $directions: top, right, bottom, left;
 
     h3 {
       color: white;
-      font-size: 18px;
+      font-size: 24px;
       line-height: 120%;
-      margin: 15px auto 0;
+      margin: 45px auto 5px;
       max-width: 80%;
+      @include bp(sm) {
+        margin-top: 15px;
+      }
       @include bp(md) {
-        font-size: 24px;
         margin-top: 45px;
       }
+    }
+
+    small {
+      font-size: 18px;
     }
 
     .bottom {
