--- a/assets/sass/partials/_slideshow.scss
+++ b/assets/sass/partials/_slideshow.scss
@@ -44,7 +44,7 @@
 
     h1 {
       font-size: 28px;
-      @include breakpoint(sm) {
+      @include bp(sm) {
         font-size: 32px;
       }
     }
@@ -53,7 +53,7 @@
       font-size: 22px;
       line-height: 140%;
       font-weight: 300;
-      @include breakpoint(md) {
+      @include bp(md) {
         font-size: 24px;
         line-height: 140%;
       }
@@ -76,7 +76,7 @@
     font-size: 120px;
     font-family: $font-icon;
   }
-  @include breakpoint(md) {
+  @include bp(md) {
     visibility: visible;
   }
 }
