--- a/assets/sass/partials/_view.scss
+++ b/assets/sass/partials/_view.scss
@@ -18,8 +18,10 @@
 }
 .front {
   .view {
-    background: image-url("bg/bg-separator-shadow.png") no-repeat top center;
-    padding-top: 100px;
+    @include bp(md) {
+      background: image-url("bg/bg-separator-shadow.png") no-repeat top center;
+      padding-top: 100px;
+    }
   }
 }
 
@@ -27,9 +29,18 @@
 // -----------------------------------------------------------------------------
 .views-exposed-form {
   .views-exposed-form__widget {
-    margin: 0 0 0 10px;
+    margin: 10px 0 0 0;
     position: relative;
-    float: left;
+    width: 100%;
+    &:last-child {
+      margin-top: 0;
+    }
+
+    @include bp(sm) {
+      margin: 0 0 0 10px;
+      width: auto;
+      float: left;
+    }
 
     &--textfield {
       > label {
@@ -38,8 +49,11 @@
       input {
         font-size: 1.0em;
         height: 41px;
-        width: 200px;
+        width: 100%;
         @include border-radius(2px);
+        @include bp(sm) {
+          width: 200px;
+        }
       }
     }
 
