--- a/assets/stylesheets/screen.css
+++ b/assets/stylesheets/screen.css
@@ -11589,6 +11589,11 @@ body.maintenance-page .form-actions {
   height: auto;
 }
 
+.view--menus--featured-menus .node--menu .menu__wrapper {
+  border: 0;
+  padding: 0;
+}
+
 .navbar-collapse {
   padding: 0;
 }
