--- a/assets/sass/partials/_structure.scss
+++ b/assets/sass/partials/_structure.scss
@@ -33,6 +33,8 @@
 // -----------------------------------------------------------------------------
 .alert {
   &.alert-success {
+    background: $brand-primary;
+    color: white;
     @extend .border--xs;
   }
 }
@@ -55,9 +57,9 @@
         margin-left: 10px;
       }
       a {
-        color: $brand-primary;
+        background-color: $brand-primary;
+        color: white;
         border: 1px solid $brand-primary;
-        width: auto;
         min-width: 0;
         padding: 5px 8px;
         font-size: 0.85em;
@@ -67,9 +69,9 @@
 
       &.active {
         a {
-          border: 0;
           background: none;
           @include box-shadow(none);
+          color: $brand-primary;
           &:hover {
             background: none;
           }
