--- a/assets/stylesheets/sizzle.screen.css
+++ b/assets/stylesheets/sizzle.screen.css
@@ -12061,6 +12061,11 @@ body {
   margin: 0 0 30px;
 }
 
+.alert.alert-success {
+  background: #796b4f;
+  color: white;
+}
+
 .node {
   position: relative;
 }
@@ -12076,9 +12081,9 @@ body {
   margin-left: 10px;
 }
 .page-tabs ul.nav-tabs li a {
-  color: #796b4f;
+  background-color: #796b4f;
+  color: white;
   border: 1px solid #796b4f;
-  width: auto;
   min-width: 0;
   padding: 5px 8px;
   font-size: 0.85em;
@@ -12088,10 +12093,10 @@ body {
   border-radius: 2px;
 }
 .page-tabs ul.nav-tabs li.active a {
-  border: 0;
   background: none;
   -webkit-box-shadow: none;
   box-shadow: none;
+  color: #796b4f;
 }
 .page-tabs ul.nav-tabs li.active a:hover {
   background: none;
