Fix position for menu image

--- a/assets/sass/partials/_menu.scss
+++ b/assets/sass/partials/_menu.scss
@@ -113,6 +113,9 @@
     .menu__title {
       font-size: 30px;
     }
+    .menu__image {
+      position: relative;
+    }
   }
 
   &--view-mode--stacked {
