--- a/assets/sass/partials/_structure.scss
+++ b/assets/sass/partials/_structure.scss
@@ -34,7 +34,7 @@
 .alert {
   &.alert-success {
     background: $brand-primary;
-    color: white;
+    color: lighten($brand-primary, 40);
     @extend .border--xs;
   }
 }
@@ -58,7 +58,7 @@
       }
       a {
         background-color: $brand-primary;
-        color: white;
+        color: lighten($brand-primary, 40);
         border: 1px solid $brand-primary;
         min-width: 0;
         padding: 5px 8px;
