--- a/assets/sass/partials/_view.scss
+++ b/assets/sass/partials/_view.scss
@@ -22,6 +22,19 @@
       background: image-url("bg/bg-separator-shadow.png") no-repeat top center;
       padding-top: 100px;
     }
+
+    &__header {
+      h1 {
+        text-transform: uppercase;
+        margin-bottom: 5px;
+      }
+      p.lead {
+        text-transform: uppercase;
+        color: $brand-secondary;
+        font-size: 15px;
+        font-weight: 400;
+      }
+    }
   }
 }
 
