Update sizzle to use the latest Radix

--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -32,7 +32,7 @@ $footer-text-color:     #B6B6B6 !default;
 // -------------------------
 
 $body-bg:               #222222 !default;
-$body-bg-image:         image-url('bg/bg-body.jpg') repeat center !default;
+$body-bg-image:         url('../images/bg/bg-body.jpg') repeat center !default;
 $text-color:            $brand-primary !default;
 
 // Links
