--- a/assets/sass/components/_layout.scss
+++ b/assets/sass/components/_layout.scss
@@ -20,7 +20,7 @@
 // -----------------------------------------------------------------------------
 .layout__region--top,
 .layout__region--region-b {
-  @include box-shadow(0 5px 5px rgba($brand-primary, 0.2));
+  box-shadow: 0 5px 5px rgba($brand-primary, 0.2);
   .pane-fieldable-panels-pane {
     margin: 0 10px 0 0;
     &.pane-bundle-text {
