--- a/assets/sass/base/_mixin.scss
+++ b/assets/sass/base/_mixin.scss
@@ -18,7 +18,7 @@
   position: absolute;
   left: 0;
   right: 0;
-  @include background-image(linear-gradient(to right, transparent, rgba($brand-primary, 0.1), rgba($brand-primary, 0.5) 50%));
+  //background-image: linear-gradient(to right, transparent, rgba($brand-primary, 0.1), rgba($brand-primary, 0.5) 50%));
 
   @if $position == 'top' {
     top: 0;
