--- a/assets/sass/components/_blog.scss
+++ b/assets/sass/components/_blog.scss
@@ -4,7 +4,7 @@
   img {
     width: 100%;
     height: auto;
-    @include border-radius(2px);
+    border-radius: 2px;
   }
 
   &--view-mode--teaser {
