--- a/assets/sass/components/_form.scss
+++ b/assets/sass/components/_form.scss
@@ -11,7 +11,7 @@
   background: none;
   padding: 10px 20px;
   border: 1px solid $brand-primary;
-  @include border-radius(2px);
+  border-radius: 2px;
   @include hover() {
     color: #ffffff;
     background: $brand-primary;
