--- a/assets/sass/components/_location.scss
+++ b/assets/sass/components/_location.scss
@@ -4,7 +4,7 @@
   .image {
     border: 1px solid $brand-primary;
     padding: 8px;
-    @include border-radius(2px);
+    border-radius: 2px;
   }
 
   .field-slideshow-controls .fa {
