--- a/assets/sass/components/_nav.scss
+++ b/assets/sass/components/_nav.scss
@@ -133,8 +133,8 @@ ul.navbar-nav {
 // -----------------------------------------------------------------------------
 ul.dropdown-menu {
   padding: 10px 0;
-  @include box-shadow(none);
-  @include border-radius(0);
+  box-shadow: none;
+  border-radius: 0;
   li {
     a {
       padding: 5px 23px;
@@ -206,7 +206,7 @@ ul.footer-nav {
     margin: 0 auto 25px;
     text-align: center;
     border: 1px solid $brand-primary;
-    @include border-radius(2px);
+    border-radius: 2px;
     @include bp(sm) {
       display: table;
     }
@@ -226,7 +226,7 @@ ul.footer-nav {
         @extend .btn;
         border: 0;
         margin: 0;
-        @include border-radius(0);
+        border-radius: 0;
         @include bp(md) {
           min-width: 200px;
         }
