--- a/assets/sass/components/_structure.scss
+++ b/assets/sass/components/_structure.scss
@@ -64,13 +64,13 @@
         padding: 5px 8px;
         font-size: 0.85em;
         line-height: 100%;
-        @include border-radius(2px);
+        border-radius: 2px;
       }
 
       &.active {
         a {
           background: none;
-          @include box-shadow(none);
+          box-shadow: none;
           color: $brand-primary;
           &:hover {
             background: none;
