--- a/assets/sass/components/_view.scss
+++ b/assets/sass/components/_view.scss
@@ -19,7 +19,7 @@
 .front {
   .view {
     @include bp(md) {
-      background: image-url("bg/bg-separator-shadow.png") no-repeat top center;
+      background: url('../images/bg/bg-separator-shadow.png') no-repeat top center;
       padding-top: 100px;
     }
 
@@ -63,7 +63,7 @@
         font-size: 1.0em;
         height: 41px;
         width: 100%;
-        @include border-radius(2px);
+        border-radius: 2px;
         @include bp(sm) {
           width: 200px;
         }
@@ -77,7 +77,7 @@
         min-width: 200px;
         text-align: left;
         font-weight: 600;
-        @include border-radius(2px);
+        border-radius: 2px;
         &:before {
           @include fa(filter);
           font-size: 1.6em;
