--- a/assets/sass/sizzle.style.scss
+++ b/assets/sass/sizzle.style.scss
@@ -2,22 +2,15 @@
 // SASS partials import
 // -----------------------------------------------------------------------------
 
+// Sizzle variables.
+// -----------------------------------------------------------------------------
+@import "base/variables";
+
 // Bootstrap global partials.
 // -----------------------------------------------------------------------------
 // Core variables and mixins
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
-
-// Bootswatch partial
-// -----------------------------------------------------------------------------
-@import "bootswatch/variables";
-
-// Sizzle global partials.
-// -----------------------------------------------------------------------------
-@import "global/variables";
-@import "radix/mixin";
-@import "global/mixin";
-@import "global/helper";
 
 // Bootstrap reset and dependencies
 // -----------------------------------------------------------------------------
@@ -75,12 +68,9 @@
 // -----------------------------------------------------------------------------
 @import "font-awesome";
 
-// Bootswatch
-// -----------------------------------------------------------------------------
-@import "bootswatch/bootswatch";
-
 // Radix styles overrides and fixes.
 // -----------------------------------------------------------------------------
+@import "radix/mixin";
 @import "radix/admin";
 @import "radix/comment";
 @import "radix/form";
@@ -94,6 +84,9 @@
 @import "radix/view";
 
 // Sizzle partials
-// --------------------------------------------------
-@import "global/typography";
-@import "partials/**/*";
+// -----------------------------------------------------------------------------
+@import "base/mixin";
+@import "base/helper";
+@import "base/typography";
+
+@import "components/**/*";
